--- a/table.html
+++ b/table.html
@@ -2,8 +2,10 @@
 <head>
 <title>TIME TABLE</title>
 <body bgcolor="white">
-<h1>Timetable Report for the year 2019-2020</h1>
-<table cellspacing=10 cellpadding=10 >
+<marquee>Timetable Published!</marquee>
+<h1><p style="text-align:center;">Bannari Amman Institute Of Technology</p></h1>
+<h2>Timetable Report for the year 2019-2020</h2>
+<center><table cellspacing=10 cellpadding=10 >
 <style>table,th,td
 {
 border:10px solid black;
@@ -70,9 +72,7 @@ border:10px solid black;
 <td>Eng</td>
 <td>Physical period</td>
 <td>Library</td>
-</tr>
-
-
+</tr></center>
 </table>
 </body>
 </html>
